tests/files/lexer_tests/should_fail/067.cmdr
// Syntax error using unterminated backtick and no command
result = `;